# claimd

./: .gitignore  CLAUDE.md  Cargo.toml  LICENCE.txt  README.md  SKILL.md
scripts/: cleanup-calculator.sh  demo-calculator.sh
src/: cli.rs  commands.rs  error.rs  event.rs  main.rs  model.rs  output.rs  store.rs
