[package]
name = "claimd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }

[profile.release]
opt-level = "s"
lto = true
strip = true
