[package]
name = "claimd"
version = "0.2.0"
edition = "2021"
description = "Concurrent todo list CLI for multi-agent AI workflows"
license = "MIT"
repository = "https://github.com/spirift/claimd"
keywords = ["todo", "cli", "agents", "tasks"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
